--- a/app/assets/stylesheets/light-gallery.scss
+++ b/app/assets/stylesheets/light-gallery.scss
@@ -99,7 +99,7 @@
     }
 
     .lg-item {
-        background: asset-url("loading.gif") no-repeat scroll center center transparent;
+        background: asset-url("lg-loading.gif") no-repeat scroll center center transparent;
         display: none !important; 
     }
     &.lg-css3{
